# docuflow

./: .gitignore  CHANGELOG.md  README.md  commitlint.config.ts  package.json  pnpm-lock.yaml  quit  release.config.mjs  release.config.ts  render.yaml
.github/workflows/: release.yml
appscript/: addFundData.js  getEmails.js
client/: .env  .env.production  .npmrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
client/src/: App.jsx  Main.jsx  config.js  logger.js
client/src/app/: store.js
client/src/components/: Button.jsx  FileUploader.jsx  Footer.jsx  FullPageSpinner.jsx  Header.jsx  LayoutOne.jsx  LinkButton.jsx  PdfDoc.jsx  PdfOverlay.jsx  PdfPage.jsx  SelectedWordsList.jsx  SelectionBox.jsx  Spinner.jsx  Steps.jsx  ThemeToggle.jsx
client/src/pages/: About.jsx  Home copy.jsx  Home.jsx  Stat.jsx  Template.jsx
client/src/styles/: custom1.css  index.css  save.css
scripts/: start-minio.sh  test.sql
server/: Dockerfile  README.md  alembic.ini  database.db  main.py  pyproject.toml  requirements.txt
server/app/: .env  deps.py  main.py
server/app/alembic/: env.py
server/app/alembic/versions/: 0de693603b91_init_tables.py  222f54f52c6f_init_tables.py  5709d0c243bd_init_tables.py  b02f67f087ba_change_to_not_nullable_for_fk_in_.py  f29e269243d6_init_tables.py
server/app/api/: main.py
server/app/api/routes/: document.py  heroes.py  template.py
server/app/core/: .env  config.py  db.py  old.py
server/app/models/: __init__.py  doc.py  docs.py  main.py  user.py  users.py
server/app/services/: misc.py
(+26 files in other folders)
